--- a/GuiaTP_01/ej_04/.bochsrc
+++ b/GuiaTP_01/ej_04/.bochsrc
@@ -2,8 +2,8 @@
 plugin_ctrl: unmapped=1, biosdev=1, speaker=1, extfpuirq=1, parallel=1, serial=1, iodebug=1
 config_interface: textconfig
 display_library: x, options="gui_debug"
-memory: host=32, guest=32
-romimage: file="bin/mibios.bin", address=0x0, options=none
+memory: host=1024, guest=1024
+romimage: file="bin/mi_bios.bin", address=0x0, options=none
 vgaromimage: file="/usr/local/share/bochs/VGABIOS-lgpl-latest"
 boot: floppy
 floppy_bootsig_check: disabled=0
@@ -34,7 +34,7 @@ cpuid: aes=0, sha=0, xsave=0, xsaveopt=0, x86_64=1, 1g_pages=0, pcid=0, fsgsbase
 cpuid: smep=0, smap=0, mwait=1
 print_timestamps: enabled=0
 debugger_log: -
-magic_break: enabled=0
+magic_break: enabled=1
 port_e9_hack: enabled=0
 private_colormap: enabled=0
 clock: sync=none, time0=local, rtc_sync=0
