--- a/GuiaTP_01/ej_05_v2/Makefile
+++ b/GuiaTP_01/ej_05_v2/Makefile
@@ -17,13 +17,15 @@ LDFLAGS = -z max-page-size=0x01000 --oformat=binary -m elf_i386
 LDSCRIPT = linker.ld
 ODFLAGS = -CprsSx --prefix-addresses
 #en objs guardo todos mis objetos elf
-OBJS = $(BINPATH)init32.elf $(BINPATH)reset.elf $(BINPATH)sys_tables.elf $(BINPATH)init16.elf $(BINPATH)main.elf  $(BINPATH)functions.elf $(BINPATH)functions_rom.elf
+OBJS = $(BINPATH)init32.elf $(BINPATH)reset.elf $(BINPATH)init16.elf $(BINPATH)main.elf  $(BINPATH)functions.elf $(BINPATH)functions_rom.elf $(BINPATH)utils_32.elf $(BINPATH)isr_keyboard.elf $(BINPATH)sys_gdt_table.elf $(BINPATH)sys_gdt_table16.elf $(BINPATH)sys_idt_table.elf
 #obj temp
 #OBJS = $(BINPATH)reset.elf $(BINPATH)init16.elf $(BINPATH)sys_tables.elf  #$(BINPATH)main.elf  $(BINPATH)functions.elf $(BINPATH)functions_rom.elf
 
 SRC_NAME = mi_bios
 
-all: $(BINPATH)$(SRC_NAME).bin $(BINPATH)$(SRC_NAME).elf bochs
+all:$(BINPATH)$(SRC_NAME).bin $(BINPATH)$(SRC_NAME).elf bochs
+	mkdir -p doc bin 
+	clean
 	mkdir -p doc
 	hexdump -C $(BINPATH)$(SRC_NAME).bin > $(DOCPATH)$(SRC_NAME)_hexdump.txt
 	objdump $(ODFLAGS) $(BINPATH)$(SRC_NAME).elf > $(DOCPATH)$(SRC_NAME)_objdump.txt
@@ -37,11 +39,6 @@ $(BINPATH)$(SRC_NAME).elf: $(OBJS)
 	ld -z max-page-size=0x01000 -m elf_i386 -T $(LDSCRIPT) $(OBJS) -o $@
 
 $(BINPATH)main.elf: $(SRCPATH)main.asm
-	@echo Generando $@
-	mkdir -p bin
-	$(AC) $(AFLAGS) $< -o $@ -l $@.lst
-
-$(BINPATH)sys_tables.elf: $(SRCPATH)sys_tables.asm
 	@echo Generando $@
 	mkdir -p bin
 	$(AC) $(AFLAGS) $< -o $@ -l $@.lst
@@ -61,6 +58,31 @@ $(BINPATH)init32.elf: $(SRCPATH)init32.asm
 	mkdir -p bin
 	$(AC) $(AFLAGS) $< -o $@ -l $@.lst
 
+$(BINPATH)utils_32.elf: $(SRCPATH)utils_32.asm
+	@echo Generando $@
+	mkdir -p bin
+	$(AC) $(AFLAGS) $< -o $@ -l $@.lst
+
+$(BINPATH)isr_keyboard.elf: $(SRCPATH)isr_keyboard.asm
+	@echo Generando $@
+	mkdir -p bin
+	$(AC) $(AFLAGS) $< -o $@ -l $@.lst
+
+$(BINPATH)sys_gdt_table16.elf: $(SRCPATH)sys_gdt_table16.asm
+	@echo Generando $@
+	mkdir -p bin
+	$(AC) $(AFLAGS) $< -o $@ -l $@.lst
+
+$(BINPATH)sys_gdt_table.elf: $(SRCPATH)sys_gdt_table.asm
+	@echo Generando $@
+	mkdir -p bin
+	$(AC) $(AFLAGS) $< -o $@ -l $@.lst
+
+$(BINPATH)sys_idt_table.elf: $(SRCPATH)sys_idt_table.asm
+	@echo Generando $@
+	mkdir -p bin
+	$(AC) $(AFLAGS) $< -o $@ -l $@.lst
+
 $(BINPATH)functions_rom.elf: $(SRCPATH)functions_rom.c
 	@echo Generando $@
 	mkdir -p bin
@@ -73,7 +95,8 @@ $(BINPATH)functions.elf: $(SRCPATH)functions.c
 
 bochs:
 	@echo llamando a bochs
-	bochs -f .bochsrc
+	@echo listo! "\ n_n /"
+	bochs -q
 
 clean:
 	@echo limpiando carpeta..
